Se Agrega la palabra "Actualizacion"

--- a/src/app/editar-component/editar-component.component.html
+++ b/src/app/editar-component/editar-component.component.html
@@ -125,7 +125,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="modal-title" id="crearteAdminModalTitle">Acutualizar Persona</h2>
+                <h2 class="modal-title" id="crearteAdminModalTitle">Actualizar Persona</h2>
                 <button #close type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="limpiar()">
                     <span aria-hidden="true">&times;</span>
                 </button>
